# libft

./: #ft_lstclear.c#  #ft_putnbr_fd.c#  #strlcat#  .gitignore  CMakeLists.txt  Makefile  Makefile~  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_split.c~  ft_strchr.c  ft_strdup.c  (+13 more)
.github/workflows/: vector-workflow-macos.yml  vector-workflow-ubuntu.yml
include/: ft_printf.h  get_next_line.h  libft.h  vector.h
srcs/char/: ft_isalnum.c  ft_tolower.c  ft_toupper.c  iswhitespace.c
srcs/fd/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c
srcs/gnl/: get_next_line.c
srcs/list/: ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstlast_iter.c  ft_lstnew_bonus.c
srcs/mem/: ft_bzero.c  ft_calloc.c  ft_memset.c
srcs/num/: ft_atoi.c  ft_itoa.c
srcs/printf/: ft_typefinder.c
srcs/string/: ft_split.c  ft_str3join.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
srcs/vector/: utils.c  vector.c
srcs/vector/int_vector/: vector.c  vector_delete.c  vector_sort.c
tests/vector/: main_intvector.c  main_strvector.c  test.sh
(+6 files in other folders)
